@startuml

class Role {
  +id: UUID
  +name: String
  +description: String
}

class User {
  +id: UUID
  +email: String
  +role: ForeignKey
}

class Profile {
  +user: OneToOne
  +dean_fields
  +rector_fields
  +service_fields
}

User --> Role
Profile --> User

note right of Role
  Roles:
  - super_admin
  - rector
  - director_academic
  - director_quality_assurance
  - dean
  - student_service
  - finance_service
  - general_service
  - rector_office
  - academic_affairs
  - teacher
  - supervisor
  - student
  - alumni
  - delegate
end note

@enduml
